--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,7 +20,6 @@ margin-right:20px;
 
 .container {
   display: flex;
-  height: 90vh;
   /* background-color: red; */
   justify-content: center;
   flex-direction: column;
@@ -52,22 +51,21 @@ margin-right:20px;
   border-radius: 30px;
 }
 
-.yellowCard{
-  width: 600px;
-  height: 350px;
-  background-color:white;
-  justify-content: center;
-  box-shadow: 1px 0px 5px -1px #ACABA3;
+.calendar {
   align-items: center;
-  border-radius: 30px;
+  justify-content: center;
 }
 
-.WhiteCard{
+.whiteCard{
   width: 1050px;
   height: 500px;
+  padding: 10px;
   box-shadow: 1px 0px 5px -1px #ACABA3;
   justify-content: center;
-
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
   align-items: center;
   border-radius: 30px;
 }
@@ -98,9 +96,9 @@ margin-right:20px;
 
 .mincard{
   background-color:#FFD500;
-  width: 50px;
-  height: 40px;
-  margin:5px 6px 0px 6px;
+  width: 40px;
+  align-self: center;
+  height: 30px;
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -186,6 +184,11 @@ text-align: left;
 color:white;
 
 
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
 }
 
 .nav-ul:hover{
