--- a/src/components/App.css
+++ b/src/components/App.css
@@ -202,7 +202,7 @@ color:white;
   }
 
 .nav-menu{
-
+width: 100%;
 height:70px;
 background-color: black;
 color:white;
@@ -213,6 +213,7 @@ align-items:stretch;
 flex-direction:row;
 display:flex;
 padding-top: 10px;
+position:fixed;
 }
 
 .nav-menu ul{
