--- a/src/components/App.css
+++ b/src/components/App.css
@@ -318,6 +318,11 @@ button:focus {
   width:250px;
 }
 
+.imgCi{
+  height:auto;
+  width:300px;
+}
+
 
 .inConf{
  
@@ -384,6 +389,10 @@ font-size: 16px;
   font-weight: 500;
   margin-top:30px;
   border: 2px solid white;
+}
+
+.dualCard{
+  height:38vh;
 }
 
 .pcard{
